--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
+body{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Varela Round', sans-serif;
+  -ms-overflow-style: none;  /* IE and Edge - scroll */
+  scrollbar-width: none;  /* Firefox - scroll */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Hide scrollbar for Chrome, Safari and Opera, But Keep Functionality */
+body::-webkit-scrollbar {
+  display: none;
 }
+
+html {
+  height: 100%;
+}
+
